# cbe423

./: README.md  pyproject.toml
assignments/assignment_1/: material.cif
assignments/assignment_2/: README.md
lecture1/: setting_up_python.md
lecture10/: README.md  thermochemistry_solid_exercise.ipynb
lecture11/: README.md  ml_regression.ipynb
lecture12/: README.md  coulomb_matrix.ipynb  krr.ipynb
lecture2/: N8.cif  README.md  SOD.cif  intro_mp_api.ipynb  intro_pymatgen.ipynb  requirements.txt
lecture3/: 1_intro_mp_api.ipynb  2_intro_mp_api_answers.ipynb  README.md  intro_mp_api.ipynb  intro_mp_api_key.ipynb  mp-169.cif  requirements.txt  submit.job
lecture4/: ase_atoms_tutorial.ipynb  ase_optimizations.ipynb  mof5.cif  requirements.txt
lecture5/: 1_ase_optimizations.ipynb  1_geometry_optimizations.ipynb  2.2.ipynb  2_ase_surface_adsorption.ipynb  2_fullerene_optimization.ipynb  3_ase_surface_adsorption.ipynb  3_transition_state_molecule.ipynb  3_transition_states_solid.ipynb  4_ase_surface_adsorption.ipynb  4_transition_states_solid.ipynb  5_ase_surface_adsorption.ipynb  README.md  ase_optimizations.ipynb  ase_surface_adsorption.ipynb  bulk_relax.traj  opt.traj  opt2.traj  requirements.txt  transition_state_molecule.ipynb  transition_states.ipynb  transition_states_solid.ipynb  vib.0.traj
lecture6/: README.md  example.py  transition_states_solid.ipynb
lecture8/: submit.job
lecture9/: README.md  mp-1597.cif  mp-865305.cif  thermochemistry_gas.ipynb  thermochemistry_solid.ipynb  thermochemistry_solid_exercise.ipynb
misc/: setting_up_python.md
(+84 files in other folders)
